# SCMAPD_with_obstacles_replan

./: CMakeLists.txt  README.md
animation/: pygame_animation.py
animation/data_0/: results.json
animation/data_obs_0/: results.json
data/: grid.txt  grid_paper.txt  test.agents  test.tasks  test_extended.agents  test_extended.tasks
handmade_obstacles/: obs_10_2.json  obs_4_1.json  obs_50_5.json
include/: AgentInfo.hpp  AmbientMap.hpp  Assignment.hpp  AssignmentUpdate.hpp  BigH.hpp  Coord.hpp  DistanceMatrix.hpp  Heap.hpp  IterableConstraints.hpp  NewTypes.hpp  NoSolution.hpp  NotPossibleOptimization.hpp  PartialAssignment.hpp  PathWrapper.hpp  Pathfinding.hpp  Robot.hpp  SCMAPD.hpp  SmallH.hpp  Status.hpp  Target.hpp  Task.hpp  TaskHandler.hpp  TypeDefs.hpp  Waypoint.hpp  utils.hpp
include/CMAPF/: Constraint.h  Node.h  Point.h  custom_types.h  pbs.h
include/CMAPF/a_star/: Node.h  multi_a_star.h
include/CMAPF/ambient/: AmbientMap.h  AmbientMapInstance.h
include/CMAPF/distances/: distances.h
include/MAPD/: AgentInfo.hpp  Assignment.hpp  BigH.hpp  Status.hpp  Task.hpp  TaskHandler.hpp  Waypoint.hpp  utils.hpp
include/MAPF/: ExploredSet.hpp  LimitedExploredSet.hpp  MultiAStar.hpp  NoPathException.hpp  Node.hpp  PathFinder.hpp  SpawnedObstacle.hpp
include/Simulation/: AbstractObstaclesWrapper.hpp  AbstractPredictObstaclesWrapper.hpp  AbstractSimulator.hpp  ObstaclesWrapper.hpp  PP.hpp  PredictedObstaclesWrapper.hpp  Predictor.hpp  RePlanObstaclesWrapper.hpp  RePlanSimulator.hpp  RunningAgent.hpp  SimpleObstaclesWrapper.hpp  Simulator.hpp  SmartObstaclesWrapper.hpp  SmartSimulator.hpp  WaitObstaclesWrapper.hpp  WaitSimulator.hpp
scripts/: build_target.py  execute_multiple_tests.py  execute_test.py  execute_tests_latest.py  generate_initial_paths.py  generate_instances.py  generate_multiple_instances.py  generate_overlapping_instances.py  generate_re_plans.py  info_extractor.py  make_plots.py  make_re_plan_plots.py  obstacles_generator.py  obstacles_generator_random.py  pygame_animation.py
src/: AgentInfo.cpp  AmbientMap.cpp  Assignment.cpp  AssignmentUpdate.cpp  BigH.cpp  Coord.cpp  DistanceMatrix.cpp  Heap.cpp  IterableConstraints.cpp  PartialAssignment.cpp  PathWrapper.cpp  Pathfinding.cpp  Robot.cpp  SCMAPD.cpp  SCMAPD.hpp.i  SmallH.cpp  Status.cpp  Target.cpp  Task.cpp  TaskHandler.cpp  Waypoint.cpp  main.cpp  utils.cpp
src/CMAPF/: Node.cpp  cbs.cpp  pbs.cpp
src/CMAPF/a_star/: Frontier.cpp  Node.cpp  multi_a_star.cpp
src/CMAPF/ambient/: AmbientMap.cpp  AmbientMapInstance.cpp
src/CMAPF/distances/: distances.cpp
src/MAPD/: AgentInfo.cpp  Assignment.cpp  BigH.cpp  PathWrapper.cpp  SCMAPD.cpp  SmallH.cpp  Status.cpp  Task.cpp  TaskHandler.cpp  Waypoint.cpp
src/MAPF/: ExploredSet.cpp  LimitedExploredSet.cpp  MultiAStar.cpp  Node.cpp  PathFinder.cpp
src/Simulation/: AbstractObstaclesWrapper.cpp  AbstractPredictObstaclesWrapper.cpp  AbstractSimulator.cpp  ObstaclesWrapper.cpp  PP.cpp  PredictedObstaclesWrapper.cpp  Predictor.cpp  RePlanObstaclesWrapper.cpp  RePlanSimulator.cpp  RunningAgent.cpp  SimpleObstaclesWrapper.cpp  Simulator.cpp  SmartObstaclesWrapper.cpp  SmartSimulator.cpp  WaitObstaclesWrapper.cpp  WaitSimulator.cpp
src/main/: obsAvoid.cpp  scmapdMain.cpp
